# swaywsr

./: Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: devskim.yml  rust.yml
assets/: example_config.toml
src/: lib.rs  main.rs
