[package]
name = "swaywsr"
version = "1.2.4"
description = "Changes Sway workspace names based on their content"
authors = ["Pedro Scaff <pedro@scaff.me>", "Andrew Savchenko <andrew@savchenko.net>"]
repository =  "https://github.com/savchenko/swaywsr"
documentation =  "https://github.com/savchenko/swaywsr"
readme = "README.md"
keywords = ["sway-wm", "window-manager", "workspaces", "linux"]
categories = ["command-line-utilities"]
license = "MIT"
exclude = ["/assets/*"]
edition = "2021"

[dependencies]
thiserror = "1.0.58"
anyhow = "1.0.79"
lazy_static = "1.4.0"
clap = { version = "4.4.18", features = ["derive"] }
toml = "0.8.8"
serde = { version = "1.0.195", features = ["derive"] }
swayipc = "3.0.2"
itertools = "0.12.0"

[profile.release]
strip = true
overflow-checks = true
incremental = false
